test-suite/tests/roundtrip/invalid/semantic/index_out_of_bounds/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/index_out_of_bounds/input.essence:3:32:
  |
3 | find a : bool such that a = (s[5] = t[1]) $ true
  |                                ^
Error: Tuple index 5 out of bounds

